project('c3c',
    'c',
    'cpp',
    version: '0.1.0',
    license: 'LGPL-3.0-or-later',
    default_options: ['c_std=gnu11'],
)

llvm_dep = dependency('llvm',
    version: '>= 10',
    modules: [
        'analysis',
        'asmprinter',
        'bitreader',
        'core',
        'executionengine',
        'instcombine',
        'interpreter',
        'mc',
        'mcdisassembler',
        'mcjit',
        'native',
        'nativecodegen',
        'object',
        'orcjit',
        'runtimedyld',
        'scalaropts',
        'support',
        'target',
        'transformutils',
    ],
    method: 'config-tool',
)

c3c_lib = library('c3c',
    sources: [
        'src/build/build_options.c',
        'src/build/builder.c',
        'src/build/project_creation.c',
        'src/build/project.c',
        'src/compiler_tests/benchmark.c',
        'src/compiler_tests/tests.c',
        'src/compiler/ast.c',
        'src/compiler/bigint.c',
        'src/compiler/compiler.c',
        'src/compiler/context.c',
        'src/compiler/diagnostics.c',
        'src/compiler/headers.c',
        'src/compiler/lexer.c',
        'src/compiler/llvm_codegen_c_abi_aarch64.c',
        'src/compiler/llvm_codegen_c_abi_riscv.c',
        'src/compiler/llvm_codegen_c_abi_wasm.c',
        'src/compiler/llvm_codegen_c_abi_win64.c',
        'src/compiler/llvm_codegen_c_abi_x64.c',
        'src/compiler/llvm_codegen_c_abi_x86.c',
        'src/compiler/llvm_codegen_c_abi.c',
        'src/compiler/llvm_codegen_debug_info.c',
        'src/compiler/llvm_codegen_expr.c',
        'src/compiler/llvm_codegen_function.c',
        'src/compiler/llvm_codegen_module.c',
        'src/compiler/llvm_codegen_stmt.c',
        'src/compiler/llvm_codegen_type.c',
        'src/compiler/llvm_codegen.c',
        'src/compiler/module.c',
        'src/compiler/number.c',
        'src/compiler/parse_expr.c',
        'src/compiler/parse_global.c',
        'src/compiler/parse_stmt.c',
        'src/compiler/parser.c',
        'src/compiler/sema_casts.c',
        'src/compiler/sema_decls.c',
        'src/compiler/sema_expr.c',
        'src/compiler/sema_name_resolution.c',
        'src/compiler/sema_passes.c',
        'src/compiler/sema_stmts.c',
        'src/compiler/sema_types.c',
        'src/compiler/semantic_analyser.c',
        'src/compiler/source_file.c',
        'src/compiler/symtab.c',
        'src/compiler/target.c',
        'src/compiler/tokens.c',
        'src/compiler/types.c',
        'src/target_info/target_info.c',
        'src/utils/errors.c',
        'src/utils/file_utils.c',
        'src/utils/malloc.c',
        'src/utils/stringutils.c',
        'src/utils/toml.c',
        'src/utils/vmem.c',
        'src/utils/whereami.c',
    ],
    dependencies: [llvm_dep],
    include_directories: include_directories('src'),
)

c3c_dep = declare_dependency(
    link_with: c3c_lib,
    include_directories: include_directories('src'),
)

executable('c3c',
    sources: ['src/main.c'],
    dependencies: [c3c_dep, llvm_dep],
)
